Fixed Lang select z-index (issue by selecting PHP)

--- a/src/styles/react-select.scss
+++ b/src/styles/react-select.scss
@@ -17,4 +17,11 @@
     color: #8d96a0;
   }
 
+  .AGB-react-select__menu {
+    z-index: 1000;
+  }
+
+  .AGB-react-select__option {
+    cursor: pointer;
+  }
 }
